--- a/ethereumj-core/build.gradle
+++ b/ethereumj-core/build.gradle
@@ -110,6 +110,8 @@ ext {
 }
 
 dependencies {
+    compile 'org.apache.geode:gemfire-core:1.0.0-incubating.M1'
+
     compile "io.netty:netty-all:4.0.30.Final"
     compile "com.madgag.spongycastle:core:${scastleVersion}" // for SHA3 and SECP256K1
     compile "com.madgag.spongycastle:prov:${scastleVersion}" // for SHA3 and SECP256K1
