Add RemoteDataSource capability discovered via Eureka

--- a/ethereumj-core/src/main/resources/eureka-client.properties
+++ b/ethereumj-core/src/main/resources/eureka-client.properties
@@ -13,6 +13,13 @@ eureka.name=org.ethereumj.test
 # what is my application virtual ip address? (clients can query on this vipAddress)
 eureka.vipAddress=test.ethereumj.org
 
+db.name=org.ethereumj.test.db
+db.vipAddress=db-1.test.ethereumj.org
+db.instanceId=db-1.test.ethereumj.org
+db.port=30666
+db.preferSameZone=true
+
+
 # what is the port that I serve on? (Change this if port 8001 is already in use in your environment)
 #eureka.port=8007
 #eureka.instanceId=bbb
